--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,7 +4,7 @@ summary: BPF Compiler Collection (BCC)
 description: A toolkit for creating efficient kernel tracing and manipulation programs
 apps:
     argdist:
-        # TODO figure out why buffered input is broken.
+        # TODO figure out why buffered output is broken.
         command: sudo -E LD_LIBRARY_PATH=$LD_LIBRARY_PATH PYTHONUNBUFFERED=1 $SNAP/usr/bin/python $SNAP/usr/share/bcc/tools/argdist
     bashreadline:
         command: sudo -E LD_LIBRARY_PATH=$LD_LIBRARY_PATH PYTHONUNBUFFERED=1 $SNAP/usr/bin/python $SNAP/usr/share/bcc/tools/bashreadline
