--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,7 +6,8 @@ confinement: devmode
 apps:
     argdist:
         # ubuntu-core-launcher mounts a new instance of devpts and python
-        # cannot grab a pty, so run unbuffered (-u).
+        # cannot grab a pty, so run unbuffered (-u):
+        # https://bugs.launchpad.net/snappy/+bug/1587675
         #
         # Snappy does not yet support CAP_SYS_ADMIN for unconfined snaps:
         # https://bugs.launchpad.net/snappy/+bug/1586581
